<resources>
    <string name="app_name">MensaHAW</string>
    <string name="wilkommen_bei_easy_mensa">Willkommen bei Easy Mensa</string>
    <string name="teller_rauf">Teller rauf</string>
    <string name="geld_hinaus">Geld hinaus</string>
    <string name="essen_im_bauch">Essen im Bauch</string>
    <string name="loslegen">Loslegen</string>
    <string name="teller_ist_drauf">Teller ist drauf!</string>
    <string name="platziere_deinen_teller_auf_die_waage_und_dr_cke_denn_knopf">Platziere deinen Teller auf die Waage und drücke den Knopf.</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="bezahlen">Bezahlen</string>
    <string name="_22_43">22.43€</string>
    <string name="_260_kg">Hack mit Hack</string>
    <string name="preis">Preis</string>
    <string name="gewicht">Gericht</string>
    <string name="scanner">scanner</string>
    <string name="gewichtetes_tagesgericht">Gewichtetes Tagesgericht</string>
    <string name="zahlung_erfolgreich">Zahlung Erfolgreich!</string>
    <string name="button">Zurück zum Start</string>
    <string name="_22_3">22.3€</string>
    <string name="bitte_warten">Bitte warten...</string>
    <string name="permission_granted">Erlaubnis erteilt!</string>
    <string name="permission_denied">Erlaubnis verweigert!</string>
    <string name="cannot_connect">Es konnte keine Verbindung zum Internet hergstellt werden, bitte überprüfe deine Internetverbindung!</string>
    <string name="ihr_gewicht_wird_gewogen">Daten werden verarbeitet!</string>
</resources>