<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CheckoutActivity">

    <TextView
        android:id="@+id/dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:text="@string/_260_kg"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:text="@string/_22_3"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <TextView
        android:id="@+id/priceheadline"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:background="#FF9800"
        android:backgroundTint="#FF9800"
        android:text="@string/preis"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dishheadline"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:background="#FF9800"
        android:text="@string/gewicht"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/paybutton"
        android:layout_width="183dp"
        android:layout_height="74dp"
        android:backgroundTint="#FF9800"
        android:text="@string/bezahlen"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish"
        app:layout_constraintVertical_bias="0.492" />

    <Button
        android:id="@+id/cancelbutton"
        android:layout_width="183dp"
        android:layout_height="74dp"
        android:backgroundTint="#B1271C"
        android:text="@string/abbrechen"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/paybutton"
        app:layout_constraintEnd_toStartOf="@+id/paybutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paybutton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dishname"
        android:layout_width="312dp"
        android:layout_height="31dp"
        android:text="@string/gewichtetes_tagesgericht"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/priceheadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/loadingscreen"
        android:layout_width="415dp"
        android:layout_height="730dp"
        android:background="#FFFFFF"
        android:text="Egal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loadingtexthead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ihr_gewicht_wird_gewogen"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/loadingscreen"
        app:layout_constraintEnd_toEndOf="@+id/loadingscreen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loadingscreen"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/loadinscreentext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bitte_warten"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="0.347" />

</androidx.constraintlayout.widget.ConstraintLayout>